<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flottery: Florida Lottery Number Checker</string>
    <string name="strTimeStamp">--/--/--</string>
    <string name="strPlayerStatus">Player Status</string>
    <string name="strLottoStatus">Lottery Status</string>
    <string name="strLottoJackpot">$0</string>
    <string name="strDefaultNumber">00</string>
    <!--
        localhost
        http://10.0.2.2/LotteryService/RestService.svc

        external to localhost
        http://192.168.77.77/LotteryService/RestService.svc

        live
        http://lotteryservice.apphb.com/RestService.svc
    -->
    <string name="strWCFServiceURL">http://lotteryservice.apphb.com/RestService.svc</string>
</resources>
