<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tableLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
    <TableRow android:id="@+id/rowTitleWinningNumbers"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="0dip" >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Winning Numbers" />
    </TableRow>
    <TableRow android:id="@+id/rowWinningNumbers"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="0dip" >
        <EditText android:id="@+id/txtLotto1"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:layout_height="match_parent"
                  android:editable="false"
                  android:focusable="false" />
        <EditText android:id="@+id/txtLotto2"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:editable="false"
                  android:focusable="false" />
        <EditText android:id="@+id/txtLotto3"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:editable="false"
                  android:focusable="false" />
        <EditText android:id="@+id/txtLotto4"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:editable="false"
                  android:focusable="false" />
        <EditText android:id="@+id/txtLotto5"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:editable="false"
                  android:focusable="false" />
        <EditText android:id="@+id/txtLotto6"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:editable="false"
                  android:focusable="false" />
    </TableRow>
    <TableRow android:id="@+id/rowTitlePlayerNumbers"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="0dip" >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Your Numbers" />
    </TableRow>
    <TableRow android:id="@+id/rowPlayerNumbers"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="0dip" >
        <EditText android:id="@+id/txtPlayer1"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
        <EditText android:id="@+id/txtPlayer2"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
        <EditText android:id="@+id/txtPlayer3"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
        <EditText android:id="@+id/txtPlayer4"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
        <EditText android:id="@+id/txtPlayer5"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
        <EditText android:id="@+id/txtPlayer6"
                  android:inputType="phone"
                  android:layout_width="0dp"
                  android:layout_weight="16.67"
                  android:selectAllOnFocus="true"
                  android:hint="@string/strDefaultNumber" />
    </TableRow>
    <TableRow android:id="@+id/rowLotteryStatus"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dip" >
        <TextView android:layout_height="wrap_content"
                  android:layout_width="0dp"
                  android:layout_weight="20"
                  android:textColor="#FF0000"
                  android:textStyle="bold"
                  android:text="Status:" />
        <TextView android:id="@+id/lblLottoStatus"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="30"
                  android:text="@string/strLottoStatus" />
        <TextView android:layout_height="wrap_content"
                  android:layout_width="0dp"
                  android:layout_weight="20"
                  android:textColor="#008000"
                  android:textStyle="bold"
                  android:text="Jackpot:" />
        <TextView android:id="@+id/lblLottoJackpot"
                  android:inputType="text"
                  android:layout_width="0dp"
                  android:layout_weight="30"
                  android:text="@string/strLottoJackpot" />
    </TableRow>
    <TableRow android:id="@+id/rowPlayerStatus0"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dip" >
        <TextView android:id="@+id/lblNumbersHit"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_weight="100"
                  android:text="0 of 6" />
    </TableRow>
    <TableRow android:id="@+id/rowPlayerStatus1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dip" >
        <TextView android:id="@+id/lblPlayerStatus"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_weight="100"
                  android:text="@string/strPlayerStatus" />
    </TableRow>
    <TableRow android:id="@+id/rowPlayerStatus2"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:gravity="center">
        <Button android:id="@+id/btnSubmit"
                android:text="Did I Win?!"
                android:onClick="btnSubmit_onClick" />
        <CheckBox android:id="@+id/cbxSavePlayerNumbers"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:lines="2"
                  android:text="Save my \nNumbers" />
    </TableRow>
    <TableRow android:id="@+id/rowPlayerStatus3"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content">
        <TextView android:id="@+id/lblStatus"
                  android:layout_height="wrap_content"
                  android:layout_width="0dp"
                  android:layout_weight="60"
                  android:gravity="left"
                  android:text="Messages" />
        <TextView android:id="@+id/lblTimeStamp"
                  android:layout_height="fill_parent"
                  android:layout_width="0dp"
                  android:layout_weight="40"
                  android:gravity="right"
                  android:text="@string/strTimeStamp" />
    </TableRow>
    <TableRow android:id="@+id/rowEmpty"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:layout_weight="1" />
    <TableRow android:id="@+id/rowPlayerStatus3"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:gravity="center">
        <Button android:id="@+id/btnAbout"
                android:text="About"
                android:onClick="btnAbout_onClick" />
    </TableRow>
</TableLayout>
